# casdoor-python-sdk

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: build.yml
.github/workflows/: build.yml
oauth/: main.py
src/casdoor/: __init__.py  adapter.py  application.py  async_main.py  cert.py  enforcer.py  group.py  main.py  model.py  organization.py  payment.py  permission.py  permisssion.py  plan.py  pricing.py  product.py  provider.py  resource.py  role.py  session.py  subscription.py  syncer.py  token.py  user.py  webhook.py
src/oauth/: __init__.py  main.py  user.py
src/tests/: __init__.py  load_tests.py  test_adapter.py  test_application.py  test_async_oauth.py  test_cert.py  test_enforcer.py  test_group.py  test_model.py  test_oauth.py  test_organization.py  test_payment.py  test_permission.py  test_plan.py  test_pricing.py  test_product.py  test_provider.py  test_resource.py  test_role.py  test_session.py  test_subscription.py  test_syncer.py  test_user.py  test_util.py  test_webhook.py
tests/: test_oauth.py
