[project]
name = "casdoor"
version = "1.17.0"
authors = [{name = "Casdoor", email = "admin@casdoor.org"}]
description = "Python SDK built for Casdoor"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["Casdoor"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.6"

[project.urls]
"Home" = "https://github.com/casdoor/casdoor-python-sdk"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py36", "py37", "py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 120

select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["I", "F"]
unfixable = []
