[metadata]
name = casdoor
version = 1.13.0
author = ffyuanda
author_email = shaoxuan.yuan02@gmail.com
url = https://github.com/casdoor/casdoor-python-sdk
description = Python SDK built for Casdoor
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
platform = any
keywords = Casdoor
classifiers = 
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
package_dir = 
	=src
packages = 
	casdoor
setup_requires = 
	setuptools
install_requires = 
	requests
	pyjwt
	cryptography
	aiohttp
python_requires = >=3.6
test_suite = tests

[bdist_wheel]
universal = true

[sdist]
formats = gztar

